k8s/base/message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: message-service

  template:
    metadata:
      labels:
        app: message-service

    spec:
      containers:
        - name: message-service
          image: mablinov2704/message-service:latest

          ports:
            - containerPort: 8082

          volumeMounts:
            - name: uploads
              mountPath: /app/uploads

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: message-uploads-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: message-service

spec:
  selector:
    app: message-service

  ports:
    - name: http
      port: 8082
      targetPort: 8082
