k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: messager

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: mablinov2704/user-service:latest

          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: messager

spec:
  selector:
    app: user-service

  ports:
    - name: http
      port: 8081
      targetPort: 8081
